--- a/index.html
+++ b/index.html
@@ -524,14 +524,7 @@
                 
                 // Preferir voces masculinas (basado en el nombre)
                 const voiceName = voice.name.toLowerCase();
-                const isMale = voiceName.includes('male') || 
-                              voiceName.includes('man') || 
-                              voiceName.includes('david') ||
-                              voiceName.includes('mark') ||
-                              voiceName.includes('paul') ||
-                              voiceName.includes('richard') ||
-                              voiceName.includes('john') ||
-                              voiceName.includes('michael');
+                const isMale = voiceName.includes('samantha');
                 
                 return isMale;
             });
